# init

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  linker.ld
include/: cmd.h  config.h  exit_status.h  motd.h  proc.h  reboot.h  shell.h  sleepns.h  tok.h
src/: banner.c  clear.c  cmd.c  echo.c  getpid.c  help.c  init.c  main.c  motd.c  reboot.c  shell.c  sleep.c  tok.c
src/cmds/: banner.c  clear.c  exit.c  getpid.c  help.c  motd.c  reboot.c  shell.c  shutdown.c  sleep.c
